# package_managers

./: .env_sample  requirements.txt  todo.txt
app/: create.py  run.py
app/core/: config.py
app/keyboards/: potion_effects.py  potion_type.py
app/potiongen/: main.py  potion_generator.py
app/routers/: start.py
pip/: commands.txt  pyproject.toml
poetry/: commands.txt
poetryproject/: pyproject.toml
poetryproject/src/poetryproject/: main.py
uv/: commands.txt
