[project]
name = "poetryproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Acylate",email = "Raminolo228@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.33.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "poetryproject", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-project = "src.poetryproject.main:main"